tests/error/nonnull_class_extend.gw
#! [contains] can't use nonnull type in class extend
class C extends nonnull Object {

}
